tests/paczka1/fuzzy1/96988312.err
Error in line 2: T6PLO A637 76,0
Error in line 3: T6PLO S362 52,0
Error in line 9: T6PLO A99 43,0
Error in line 17: T6PLO A99 71,1
Error in line 25: T6PLO A637 96,5
Error in line 29: VvbZS S362 88,69
Error in line 30: i9abjj6Ee3 A637 15,7
Error in line 24: VvbZS S362 63,5
